alignemn fix.

--- a/src/components/ActionHeader/ActionHeader.module.scss
+++ b/src/components/ActionHeader/ActionHeader.module.scss
@@ -54,6 +54,10 @@
 
 	.rightContainer {
 		width: 25%;
+
+		.btnList {
+			margin-left: 20px;
+		}
 	}
 }
 
